--- a/app/app.css
+++ b/app/app.css
@@ -45,6 +45,10 @@ body {
   animation: movin 10s cubic-bezier(0.175, 0.885, 0.32, 1.575) infinite;
 }
 
+.custom-settings-icon path {
+  stroke-width: 12 !important;
+}
+
 @keyframes movin {
   0% {
     opacity: 0;
